add meeting test

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@solid/object": "^0.4.0",
     "rdfjs-wrapper": "^0.15.0"
   },
   "devDependencies": {
